# FuckFFmpeg

DemoFDKAAC_autoconf/: settings.gradle
DemoFDKAAC_autoconf/app/: build.gradle
DemoFDKAAC_autoconf/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
DemoFDKAAC_autoconf/app/src/main/java/com/shuyun/demofdk/: MainActivity.java
DemoFDKAAC_autoconf/app/src/main/res/values/: strings.xml
DemoFDKAAC_autoconf/app/src/test/java/com/shuyun/demofdk/: ExampleUnitTest.java
DemoFDKAAC_cmake/: settings.gradle
DemoFDKAAC_cmake/app/: build.gradle
DemoFDKAAC_cmake/app/src/androidTest/java/com/shuyun/demofdkaac/: ExampleInstrumentedTest.java
DemoFDKAAC_cmake/app/src/main/: AndroidManifest.xml
DemoFDKAAC_cmake/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
DemoFDKAAC_cmake/app/src/main/cpp/libSBRdec/src/: lpp_tran.cpp
DemoFDKAAC_cmake/app/src/main/java/com/shuyun/demofdkaac/: MainActivity.java
DemoFDKAAC_cmake/app/src/main/res/values/: strings.xml
DemoFDKAAC_cmake/app/src/test/java/com/shuyun/demofdkaac/: ExampleUnitTest.java
DemoFDKAAC_cmake/gradle/wrapper/: gradle-wrapper.properties
DemoFDKAAC_standalone/app/src/androidTest/java/com/shuyun/demofdk/: ExampleInstrumentedTest.java
DemoFDKAAC_standalone/app/src/main/: AndroidManifest.xml
DemoFDKAAC_standalone/gradle/wrapper/: gradle-wrapper.properties
DemoFFmpeg_simple/: settings.gradle
DemoFFmpeg_simple/app/: build.gradle
DemoFFmpeg_simple/app/src/androidTest/java/com/shuyun/demoffmpeg/: ExampleInstrumentedTest.java
DemoFFmpeg_simple/app/src/main/: AndroidManifest.xml
DemoFFmpeg_simple/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
DemoFFmpeg_simple/app/src/main/java/com/shuyun/demoffmpeg/: MainActivity.java
DemoFFmpeg_simple/app/src/main/res/values/: strings.xml
DemoFFmpeg_simple/app/src/test/java/com/shuyun/demoffmpeg/: ExampleUnitTest.java
DemoFFmpeg_simple/gradle/wrapper/: gradle-wrapper.properties
DemoLame_autoconf/: settings.gradle
DemoLame_autoconf/app/: build.gradle
DemoLame_autoconf/app/src/main/: AndroidManifest.xml
DemoLame_cmake/: settings.gradle
DemoLame_cmake/app/: build.gradle
DemoLame_cmake/app/src/androidTest/java/com/shuyun/demolame/: ExampleInstrumentedTest.java
DemoLame_cmake/app/src/androidTest/java/com/shuyun/demolame_cmake/: ExampleInstrumentedTest.java
DemoLame_cmake/app/src/main/: AndroidManifest.xml
DemoLame_cmake/app/src/main/cpp/: CMakeLists.txt  Mp3Encoder.cpp  Mp3Encoder.h  native-lib.cpp
DemoLame_cmake/app/src/main/java/com/shuyun/demolame/: MainActivity.java
DemoLame_cmake/app/src/main/java/com/shuyun/demolame_cmake/: MainActivity.java
DemoLame_cmake/app/src/main/res/values/: strings.xml
DemoLame_cmake/app/src/test/java/com/shuyun/demolame_cmake/: ExampleUnitTest.java
DemoLame_cmake/gradle/wrapper/: gradle-wrapper.properties
DemoLame_ndkbuild/: settings.gradle
DemoLame_ndkbuild/app/: build.gradle
DemoLame_ndkbuild/app/src/androidTest/java/com/shuyun/demolame/: ExampleInstrumentedTest.java
DemoLame_ndkbuild/app/src/main/: AndroidManifest.xml
DemoLame_ndkbuild/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
DemoLame_ndkbuild/app/src/main/java/com/shuyun/demolame/: MainActivity.java
DemoLame_ndkbuild/app/src/main/res/values/: strings.xml
DemoLame_ndkbuild/app/src/test/java/com/shuyun/demolame/: ExampleUnitTest.java
DemoLame_ndkbuild/gradle/wrapper/: gradle-wrapper.properties
DemoLame_standalone/: settings.gradle
DemoLame_standalone/app/: build.gradle
DemoLame_standalone/app/src/main/cpp/: native-lib.cpp
DemoLame_standalone/app/src/main/res/values/: strings.xml
SHELL/lame_ndk-build/: README.md  build_lame.sh
SHELL/lame_ndk-build2/: README.md  build_lame.sh
SHELL/lame_ndk-build2/armv7a/lib/: libmp3lame.la
Script/: ndk-config.md
Script/fdk-aac_script/: README.md  build.sh  build_import.sh
Script/fdk-aac_script/output/lib/pkgconfig/: fdk-aac.pc
Script/ffmpeg_full/: README.md  build.sh
Script/ffmpeg_full/ffmpeg/: build.sh
Script/ffmpeg_full/ffmpeg/external-libs/fdk-aac/lib/: libfdk-aac.la
Script/ffmpeg_full/ffmpeg/external-libs/lame/lib/: libmp3lame.la
Script/ffmpeg_full/ffmpeg/external-libs/x264/lib/pkgconfig/: x264.pc
Script/ffmpeg_full/output/include/libavutil/: ffversion.h
Script/ffmpeg_full/output/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
Script/ffmpeg_full/output/share/man/man1/: ffmpeg-all.1  ffmpeg-codecs.1  ffmpeg-devices.1  ffmpeg-filters.1  ffmpeg-formats.1  ffmpeg-protocols.1  ffmpeg.1  ffprobe-all.1
Script/ffmpeg_script/: build.sh
Script/ffmpeg_script/ffmpeg/: VERSION  configure
Script/ffmpeg_script/output/armv7-a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
Script/lame_autoconf_script/: build_r21.sh
Script/lame_script/: build_import.sh
Script/x264_script/: build.sh  build_import.sh
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/shuyun/fuckffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FuckFFmpeg-lib.cpp
app/src/main/java/shuyun/fuckffmpeg/: Fucker.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/shuyun/fuckffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
